--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -5,7 +5,9 @@
 
             <div class="navbar">
                 <div class="logo">
-                    <img src="{% static 'images/logo.png' %}" width="125px">
+                    <a href="{% url 'index' %}">
+                        <img src="{% static 'images/logo.png' %}" width="125px">
+                    </a>
                 </div>
                 <nav>
                     <ul id="menuitem">
