--- a/templates/subject/single-subject.html
+++ b/templates/subject/single-subject.html
@@ -6,7 +6,9 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="{% static 'images/logo.png' %}" width="125px">
+                    <a href="{% url 'index' %}">
+                        <img src="{% static 'images/logo.png' %}" width="125px">
+                    </a>
                 </div>
                 <nav>
                     <ul id="menuitem">
