--- a/templates/teacher/single-teacher.html
+++ b/templates/teacher/single-teacher.html
@@ -20,10 +20,10 @@
                     </ul>
                 </nav>
             </div>
-            <div class="smallcon">
-                <div class="row" style="display: block;"> 
-                    <div class="col-2" style="text-align: center;">
-                        <img src="{{ teacher.profile_pic.url }}">
+            <div class="smallcon singlepro">
+                <div class="row"> 
+                    <div class="col-2" >
+                        <img src="{{ teacher.profile_pic.url }}" height="400px" width="400px">
                     </div>
                    
                     <div class="col-2">
