--- a/static/css/student-style.css
+++ b/static/css/student-style.css
@@ -711,7 +711,7 @@ th:last-child{
 }
 .btn1{
     display: inline-block;
-    background: #ff2953;
+    background: #63e5f9;
     color: #fff;
     padding: 8px 30px;
     margin: 30px 0;
@@ -721,6 +721,23 @@ th:last-child{
     margin-left: 100px;
    text-align: center;
  
+}
+.btn8{
+    display: inline-block;
+    background: #34c0d5;
+    color: #fff;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 10px;
+    transition:background 0.5s;
+    width: 300px;
+    margin-left: 500px;
+
+   text-align: center;
+ 
+}
+.btn8:hover{
+    background:rgb(188, 247, 248);
 }
 .go{
     margin-left: 100px;
