--- a/templates/subject/single-subject.html
+++ b/templates/subject/single-subject.html
@@ -39,7 +39,11 @@
                 <a href="{{subject.syllabus}}" target="_blank">Syllabus link</a>
                 
             </div>
-            <a href="{% url 'enroll' subject.id %}" style="background-color: white; padding: 5px; border-radius: 10px;">Enroll Now</a>
+            <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/inWWhr5tnEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+    
+           
         </div>
+        <a href="{% url 'enroll' subject.id %}" class="btn8">Enroll Now</a>
     </div>
 {% endblock content %}
