--- a/templates/students/add-multiple-students.html
+++ b/templates/students/add-multiple-students.html
@@ -30,7 +30,7 @@
         <i class="fa-solid fa-arrow-up-from-bracket"></i>
         &nbsp; Choose Files To Upload
       </label>
-      <button type="submit">SUBMIT</button>
+      <button type="submit" class="submitbtn">SUBMIT</button>
     </form>
   </div>
     <!-- Script -->
