--- a/templates/subject/all-subjects.html
+++ b/templates/subject/all-subjects.html
@@ -28,12 +28,20 @@
 
         {% for sub in subjects %}
 
-            <div class="subject sub1">
-                <h1>{{sub.name}}</h1><br>
-                <p>{{sub.teacher.name}}</p> <!--can be  a link to the faculty profile-->
-                <p>{{sub.department.name}}</p>
-                <a href="{% url 'single-subject' sub.id %}" class="sub_info">Read More</a>
+        <div class="feedback">
+            <div class="smallcon">
+                <div class="row"> 
+                    <a href="{% url 'single-subject' sub.id %}">  
+                        <div class="col3">
+                            <h1>{{sub.name}}</h1><br>
+                            <div><img src="" width="100px" height="100px"></div><br>
+                            <p>{{sub.teacher.name}}</p> <!--can be  a link to the faculty profile-->
+                            <p>{{sub.department.name}}</p>
+                        </div>
+                    </a>
+                </div>
             </div>
+        </div>
 
         {% endfor %}
 
