--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -136,6 +136,8 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.3/apexcharts.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
    
     <script src="{% static 'js/graph-script.js' %}"></script>
 
