--- a/templates/subject/single-subject.html
+++ b/templates/subject/single-subject.html
@@ -26,7 +26,7 @@
             
             <div class="col-2">
                 <h2 class="title">{{subject.name}}</h2>
-                <img src="" height="300px" width="300px">
+                <img src="{{ subject.cover_img.url }}" height="300px" width="300px">
             </div>
             <div class="col-2">
                 <h4><b>Taught by : </b>{{subject.teacher.name}}</h4>
