--- a/templates/subject/all-subjects.html
+++ b/templates/subject/all-subjects.html
@@ -28,11 +28,11 @@
 
         {% for sub in subjects %}
 
-        <div class="feedback">
+        <!-- <div class="feedback"> -->
             <div class="smallcon">
                 <div class="row"> 
                     <a href="{% url 'single-subject' sub.id %}">  
-                        <div class="col3">
+                        <div class="col4">
                             <h1>{{sub.name}}</h1><br>
                             <div><img src="" width="100px" height="100px"></div><br>
                             <p>{{sub.teacher.name}}</p> <!--can be  a link to the faculty profile-->
@@ -41,7 +41,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        <!-- </div> -->
 
         {% endfor %}
 
