--- a/static/css/admin-style.css
+++ b/static/css/admin-style.css
@@ -113,7 +113,7 @@ p{
     min-width: 400px;
     margin-bottom: 50px;
     transition: transform 0.5s;
-   
+   border-radius: 10px;
     box-shadow: 10px 0 20px 10px rgba(0, 0,0,0.1);
    background-color: rgb(255, 255, 255);
     cursor: pointer;
