--- a/templates/common/contact-us.html
+++ b/templates/common/contact-us.html
@@ -28,6 +28,7 @@
         <div class="row">
             <div class="contactcol">
                 <form method="post">
+                    {% csrf_token %}
                     <input name="name" class="an" type="text" placeholder="Enter your Name" required>
                     <input name="email" class="an" type="email" placeholder="Enter email address" required>
                     <textarea class="an" name="message" rows="8" placeholder="Enter you Query" required></textarea>
