--- a/templates/teacher/admin-all-teachers.html
+++ b/templates/teacher/admin-all-teachers.html
@@ -7,7 +7,7 @@
         <h2 class="title">Teachers</h2>
         <div class="row">
             {% for tea in teachers %}
-                <a class="col4" href="{% url 'single-teacher' tea.id %}">
+                <a class="col4" href="{% url 'admin-single-teacher' tea.id %}">
                     <!-- <div class="col4"> -->
                         <img src="{{ tea.profile_pic.url }}" width="200px" height="400px">
                         <h4>{{ tea.name | safe }}</h4>
