--- a/templates/subject/single-subject.html
+++ b/templates/subject/single-subject.html
@@ -25,14 +25,14 @@
         <div class="row">
             
             <div class="col-2">
-                
-                <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/inWWhr5tnEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="video"><iframe width="100%" height="100%" src="{{subject.intro}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-2">
                 <h1>{{subject.name}}</h1>
                 <h4><b>Taught by : </b>{{subject.teacher.name}}</h4>
                 <h5>{{subject.teacher.post}}</h5>
+                <h5>{{subject.intro}}</h5>
                 <br> 
                 <h3>Subject details &#8594;</h3>
                 <br>
