--- a/templates/stu-base.html
+++ b/templates/stu-base.html
@@ -21,6 +21,9 @@
     <meta property="og:type" content="web-application" />
     <meta property="og:url" content="http://127.0.0.1:8000" />
     <meta property="og:image" content="{% static 'images/logo.png' %}" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+
 </head>
 
 <body>
@@ -43,7 +46,7 @@
             menuitem.style.maxHeight = "0px";
         }
     }
-    
+
     function showSuccessToast() {
           toast({
             title: "Toast Message",
@@ -53,53 +56,50 @@
           });
         }
 
-
-    // Toast function
-    function toast({ title = "", message = "", type = "info", duration = 3000 }) {
+        function toast({ title = "", message = "", type = "info", duration = 3000 }) {
         const main = document.getElementById("toast");
         if (main) {
             const toast = document.createElement("div");
+
             // Auto remove toast
             const autoRemoveId = setTimeout(function () {
             main.removeChild(toast);
             }, duration + 1000);
+
             // Remove toast when clicked
             toast.onclick = function (e) {
             if (e.target.closest(".toast__close")) {
                 main.removeChild(toast);
                 clearTimeout(autoRemoveId);
             }
-        };
+            };
+            const icons = {
+            success: "fas fa-check-circle",
+            info: "fas fa-info-circle",
+            warning: "fas fa-exclamation-circle",
+            error: "fas fa-exclamation-circle"
+            };
+            const icon = icons[type];
+            const delay = (duration / 1000).toFixed(2);
 
-        const icons = {
-        success: "fas fa-check-circle",
-        info: "fas fa-info-circle",
-        warning: "fas fa-exclamation-circle",
-        error: "fas fa-exclamation-circle"
-        };
+            toast.classList.add("toast", `toast--${type}`);
+            toast.style.animation = `slideInLeft ease .3s, fadeOut linear 1s ${delay}s forwards`;
 
-        const icon = icons[type];
-        const delay = (duration / 1000).toFixed(2);
-
-        toast.classList.add("toast", `toast--${type}`);
-        toast.style.animation = `slideInLeft ease .3s, fadeOut linear 1s ${delay}s forwards`;
-
-        toast.innerHTML = `
-                        <div class="toast__icon">
-                            <i class="${icon}"></i>
-                        </div>
-                        <div class="toast__body">
-                            <h3 class="toast__title">${title}</h3>
-                            <p class="toast__msg">${message}</p>
-                        </div>
-                        <div class="toast__close">
-                            <i class="fas fa-times"></i>
-                        </div>
-                    `;
-        main.appendChild(toast);
+            toast.innerHTML = `
+                            <div class="toast__icon">
+                                <i class="${icon}"></i>
+                            </div>
+                            <div class="toast__body">
+                                <h3 class="toast__title">${title}</h3>
+                                <p class="toast__msg">${message}</p>
+                            </div>
+                            <div class="toast__close">
+                                <i class="fas fa-times"></i>
+                            </div>
+                        `;
+            main.appendChild(toast);
         }
     }
-
 
 </script>
 </html>
