--- a/static/css/admin-style.css
+++ b/static/css/admin-style.css
@@ -1153,8 +1153,11 @@ margin-top: 30px;
     box-shadow: 0 1.25em 2.18em rgb(1, 28, 71, 0.3);
     align-self: center;
   }
-  input[type="file"] {
+  /* input[type="file"] {
     display: none;
+  } */
+  .custom_file_up::-webkit-file-upload-button{    
+    visibility: hidden;
   }
   label {
     display: block;
