--- a/templates/teacher/add-teacher.html
+++ b/templates/teacher/add-teacher.html
@@ -9,7 +9,7 @@
             <form action="" method="post">
                 <input class="an" type="text" name="name" placeholder="Enter faculty name" required>
                 <select id="dept" name="dept" class="an" required style="color: grey; width: 100%; padding: 15px; margin-bottom: 15px;">
-                    <option value="">Enter Student Department</option>
+                    <option value="">Enter Faculty Department</option>
                     {% for dept in departments %}
                     <option value={{dept.id}}>{{dept.name}}</option>
                     {% endfor %}
@@ -18,7 +18,8 @@
                 <input class="an" type="text" name="contact" placeholder="Enter faculty contact no" required>
                 <input class="an" type="text" name="post" placeholder="Enter faculty Post" required>
                 <!-- <input type="image" placeholder="Upload Teacher's Profile Picture" required> -->
-                <input type="image"  name="profile_pic" src="" alt="profile_pic">
+                <span style="color: grey; font-size: 14px;margin-left: 12px;">Add teacher profile picture</span>
+                <input class="an custom_file_up" type="file" name="profile_pic" style="width: 60%;" required>
                 <button type="submit" class="submitbtn">Add faculty</button>
             </form>
         </div>
