--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -43,6 +43,10 @@
             <p class="chart-title">Students Subject Enrollment and Change Requests Graph</p>
             <div id="area-chart"></div>
           </div>
+          <div class="charts-card">
+            <p class="chart-title">Total students opted in each department</p>
+            <div id="bar-chart1"></div>
+          </div>
         </div>
         
       </main>
