new charts added

--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -38,14 +38,21 @@
           <div class="charts-card">
             <p class="chart-title">Students Subject Enrollment Graph</p>
             <div id="bar-chart"></div>
+          
           </div>
           <div class="charts-card">
             <p class="chart-title">Students Subject Enrollment and Change Requests Graph</p>
             <div id="area-chart"></div>
           </div>
+          
           <div class="charts-card">
-            <p class="chart-title">Total students opted in each department</p>
-            <div id="bar-chart1"></div>
+            <p class="chart-title">No of students in each department</p>
+            <div id="pie-chart" style="margin-top: 50px;margin-left: 90px;"></div>
+          </div>
+
+          <div class="charts-card">
+            <p class="chart-title">Students vs subject dept wise</p>
+            <div id="radar-chart"></div>
           </div>
         </div>
         
