--- a/templates/admin-base.html
+++ b/templates/admin-base.html
@@ -21,6 +21,7 @@
     <meta property="og:type" content="web-application" />
     <meta property="og:url" content="http://127.0.0.1:8000" />
     <meta property="og:image" content="{% static 'images/logo.png' %}" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
@@ -109,16 +110,25 @@
   
         </aside>
         <!-- End Sidebar -->
-    {% if messages %}
-        {% for message in messages %}
-            <div class="imp_msg" >{{ message }}</div>
-        {% endfor %}
-    {% endif %}
+
+        
+
+        <!-- Messages -->
+        {% if messages %}
+            {% for msg in messages %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                  <strong>{{ msg }}</strong>
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        {% endif %}
+
+    <!-- Content -->
     {% block content %}
     {% endblock content %}
 </body>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script>
   /* When the user clicks on the button, 
   toggle between hiding and showing the dropdown content */
