--- a/templates/teacher-base.html
+++ b/templates/teacher-base.html
@@ -24,11 +24,17 @@
 </head>
 
 <body>
+    <!-- Messages -->
     {% if messages %}
-        {% for message in messages %}
-            <div class="imp_msg" >{{ message }}</div>
+        {% for msg in messages %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>{{ msg }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
         {% endfor %}
     {% endif %}
+
+    <!-- Content -->
     {% block content %}
     {% endblock content %}
 </body>
