--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -46,7 +46,7 @@
           </div>
           
           <div class="charts-card">
-            <p class="chart-title">No of students in each department</p>
+            <p class="chart-title">No. of Students in Each Department</p>
             <div id="pie-chart" style="margin-top: 50px;margin-left: 90px;"></div>
           </div>
 
