--- a/static/css/admin-style.css
+++ b/static/css/admin-style.css
@@ -612,9 +612,9 @@ table{
 }
 th{
     text-align: left;
-    padding: 5px;
+    padding: 10px;
     color: #fff;
-    background:#ff2953;
+    background:#51d7eb;
     font-weight: normal;
 }
 td{
