--- a/templates/admin-base.html
+++ b/templates/admin-base.html
@@ -107,7 +107,7 @@
               <div class="dropdown" >
                 <button onclick="myFunction4()" class="dropbtn">Department &#9660;</button>
                 <div id="myDropdown4" class="dropdown-content">
-                  <a href="{% url 'admin-all-subjects' %}">All Departments</a>
+                  <a href="{% url 'all-subjects' %}">All Departments</a>
                   <a href="{% url 'add-subject' %}">Add Department</a>
                 </div>
               </div>
