--- a/templates/department/all-department.html
+++ b/templates/department/all-department.html
@@ -3,19 +3,22 @@
 
 {% block content %}
 <main class="main-container">
-    <div class="smallcon">
-        <h2 class="title">Department</h2>
-        <div class="row">
-            <!-- {% for tea in teachers %} -->
-                <a class="col4" href="{% url 'single-teacher' tea.id %}">
-                    <!-- <div class="col4"> -->
-                        <img src="{{ tea.profile_pic.url }}" width="200px" height="400px">
-                        <h4>{{ tea.name | safe }}</h4>
-                        <p>{{ tea.department.name | safe }}</p>
-                    <!-- </div> -->
-                </a>
-            {% endfor %}
-        </div>
+    <div class="subject_container">
+        {% for sub in subjects %}
+        <h2 class="title">ALL DEPARTMENT</h2>
+            <div class="smallcon">
+                <div class="row"> 
+                    <a href="{% url 'admin-single-subject' sub.id %}">  
+                        <div class="col4" style="padding: 40px;">
+                            <h1>{{sub.name}}</h1><br>
+                            <div><img src="{{ sub.cover_img.url }}" style="width: 250px; height: 250px;"></div><br>
+                            <h3>Taught by:{{sub.teacher.name}}</h3> <!--can be  a link to the faculty profile-->
+                            <h3>{{sub.department.name}}</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        {% endfor %}
     </div>
 </main>
 {% endblock content %}
