--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -31,6 +31,13 @@
             </div>
             <span class="text-primary font-weight-bold">{{subject_count}}</span>
           </div>
+          
+          <div class="card">
+            <div class="card-inner">
+              <p class="text-primary"><b>Department Count</b></p>
+            </div>
+            <span class="text-primary font-weight-bold">{{dept_count}}</span>
+          </div>
 
         </div>
 
