--- a/templates/department/all-department.html
+++ b/templates/department/all-department.html
@@ -4,18 +4,14 @@
 {% block content %}
 <main class="main-container">
     <div class="subject_container">
-        {% for sub in subjects %}
         <h2 class="title">ALL DEPARTMENT</h2>
+        {% for dept in department %}
             <div class="smallcon">
                 <div class="row"> 
-                    <a href="{% url 'admin-single-subject' sub.id %}">  
-                        <div class="col4" style="padding: 40px;">
-                            <h1>{{sub.name}}</h1><br>
-                            <div><img src="{{ sub.cover_img.url }}" style="width: 250px; height: 250px;"></div><br>
-                            <h3>Taught by:{{sub.teacher.name}}</h3> <!--can be  a link to the faculty profile-->
-                            <h3>{{sub.department.name}}</h3>
-                        </div>
-                    </a>
+                    <div class="col4" style="padding: 40px;">
+                        <h1>{{dept.name}}</h1><br>
+                        <h3>{{dept.code}}</h3>
+                    </div>
                 </div>
             </div>
         {% endfor %}
